--- a/.github/workflows/test-libadmin.yaml
+++ b/.github/workflows/test-libadmin.yaml
@@ -35,6 +35,8 @@ jobs:
         run: python3 -m venv venv
       - name: Activate it 
         run: source venv/bin/activate
+      - name: Update pip, just because
+        run: pip install --upgrade pip
       - name: Install the app 
         run: pip install .
       - name: See if we can get help docs
