--- a/.github/workflows/test-libadmin.yaml
+++ b/.github/workflows/test-libadmin.yaml
@@ -25,12 +25,13 @@ jobs:
         run: docker build -t library/postgres:latest -f Dockerfile.pgjwt .
       - name: Run the containers
         run: docker compose up -d
-        # Should I find a way to do a health check? Or, timeout?
-        # https://stackoverflow.com/questions/65949957/how-can-i-wait-for-the-container-to-be-healthy-in-github-action
+      # Should I find a way to do a health check? Or, timeout?
+      # https://stackoverflow.com/questions/65949957/how-can-i-wait-for-the-container-to-be-healthy-in-github-action
+      # https://github.com/marketplace/actions/wait-sleep
+      # Lighter... use sleep.
       - name: Sleep for 10 seconds
-        uses: jakejarvis/wait-action@master
-        with:
-          time: '10s'
+        run: sleep 10s
+        shell: bash
       - name: Create a venv.
         run: python3 -m venv venv
       - name: Activate it 
